<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_add_loan_container"
        android:background="@color/primaryColor"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/loan_type_pic"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="@+id/loan_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/loan_type"
        />
    <TextView
            android:id="@+id/loan_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:textSize="@dimen/title_size"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toRightOf="@+id/loan_type_pic"
            app:layout_constraintRight_toRightOf="parent"
            />

    <TextView
            android:id="@+id/loan_product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:textSize="@dimen/text_size_max"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/what"
            app:layout_constraintTop_toBottomOf="@+id/loan_type"
            app:layout_constraintBottom_toTopOf="@+id/loan_recipient"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guideline_vertical_left"
            />

    <AutoCompleteTextView
            android:id="@+id/loan_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:layout_margin="@dimen/basic"
            android:hint="@string/product_hint"
            android:background="@color/primaryLightColor"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/loan_type"
            app:layout_constraintLeft_toRightOf="@+id/guideline_vertical_left"
            app:layout_constraintRight_toRightOf="parent"
            />

    <TextView
            android:id="@+id/loan_recipient_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:textSize="@dimen/text_size_max"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/whom"
            app:layout_constraintTop_toBottomOf="@+id/loan_product"
            app:layout_constraintBottom_toTopOf="@+id/spinner_loan_categories"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guideline_vertical_left"
            />

    <AutoCompleteTextView
            android:id="@+id/loan_recipient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:layout_margin="@dimen/basic"
            android:hint="@string/recipient_hint"
            android:background="@color/primaryLightColor"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/loan_product"
            app:layout_constraintLeft_toRightOf="@+id/guideline_vertical_left"
            app:layout_constraintRight_toRightOf="parent"
            />

    <TextView
            android:id="@+id/loan_spinner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:layout_margin="@dimen/basic"
            android:textSize="@dimen/text_size_max"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/type"
            app:layout_constraintTop_toBottomOf="@+id/loan_recipient"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guideline_vertical_left"
            />

    <Spinner
            android:id="@+id/spinner_loan_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/basic"
            android:layout_margin="@dimen/basic"
            android:background="@color/primaryLightColor"
            app:layout_constraintTop_toBottomOf="@+id/loan_recipient"
            app:layout_constraintLeft_toRightOf="@+id/guideline_vertical_left"
            app:layout_constraintRight_toRightOf="parent"
            />

    <TextView
            android:id="@+id/loan_due_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:layout_margin="@dimen/basic"
            android:textSize="@dimen/text_size_max"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/when"
            app:layout_constraintTop_toBottomOf="@+id/spinner_loan_categories"
            app:layout_constraintBottom_toBottomOf="@id/loan_due_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guideline_vertical_left"
            />

    <TextView
            android:id="@+id/loan_due_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:layout_margin="@dimen/basic"
            android:hint="@string/due_date_hint"
            android:background="@color/primaryColor"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_max"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/spinner_loan_categories"
            app:layout_constraintLeft_toRightOf="@+id/guideline_vertical_left"
            app:layout_constraintRight_toLeftOf="@+id/mBtnCancelDate"
            />

    <ImageButton
            android:id="@+id/mBtnCancelDate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/secondaryColor"
            android:contentDescription="@string/cancel"
            android:onClick="cancelDate"
            android:paddingStart="@dimen/basic"
            android:paddingEnd="@dimen/basic"
            android:src="@drawable/ic_cancel"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/loan_due_date_title"
            app:layout_constraintTop_toTopOf="@+id/loan_due_date_title"
            app:layout_constraintLeft_toRightOf="@+id/loan_due_date"
            app:layout_constraintRight_toLeftOf="@id/mBtnPick" />

    <Button
            android:id="@+id/mBtnPick"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/basic"
            android:layout_marginEnd="@dimen/basic"
            android:background="@color/secondaryColor"
            android:text="@string/pick"
            android:onClick="clickDataPicker"
            app:layout_constraintTop_toTopOf="@+id/loan_due_date_title"
            app:layout_constraintBottom_toBottomOf="@+id/loan_due_date_title"
            app:layout_constraintLeft_toRightOf="@+id/mBtnCancelDate"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:id="@+id/loan_notif_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic"
            android:padding="@dimen/extra"
            android:textSize="@dimen/text_size_max"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/notif"
            app:layout_constraintTop_toBottomOf="@+id/loan_due_date_title"
            app:layout_constraintBottom_toTopOf="@+id/warning"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guideline_vertical_left"
            />

    <TextView
            android:id="@+id/loan_notif_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/extra"
            android:layout_margin="@dimen/basic"
            android:hint="@string/notif_date_hint"
            android:background="@color/primaryColor"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_max"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@+id/loan_notif_title"
            app:layout_constraintBottom_toBottomOf="@+id/loan_notif_title"
            app:layout_constraintLeft_toRightOf="@+id/loan_notif_title"
            app:layout_constraintRight_toLeftOf="@+id/mBtnCancelNotif"
            />

    <ImageButton
            android:id="@+id/mBtnCancelNotif"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/secondaryColor"
            android:onClick="cancelDate"
            android:paddingEnd="@dimen/basic"
            android:paddingStart="@dimen/basic"
            android:src="@drawable/ic_cancel"
            android:visibility="gone"
            android:contentDescription="@string/cancel"
            app:layout_constraintTop_toTopOf="@+id/loan_notif_title"
            app:layout_constraintBottom_toBottomOf="@+id/loan_notif_title"
            app:layout_constraintLeft_toRightOf="@+id/loan_notif_date"
            app:layout_constraintRight_toLeftOf="@id/mBtnPickNotif"/>

    <LinearLayout
                android:id="@+id/toggle_btns"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginStart="@dimen/basic"
                app:layout_constraintTop_toTopOf="@+id/loan_notif_title"
                app:layout_constraintBottom_toBottomOf="@+id/loan_notif_title"
                app:layout_constraintLeft_toRightOf="@+id/loan_notif_title"
                app:layout_constraintRight_toLeftOf="@+id/mBtnPickNotif">

            <ToggleButton
                    android:id="@+id/notif_d_day"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_grey"
                    android:layout_marginEnd="@dimen/basic"
                    android:textOn="@string/d_day"
                    android:textOff="@string/d_day"/>

            <ToggleButton
                    android:id="@+id/notif_three_days"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_grey"
                    android:layout_marginEnd="@dimen/basic"
                    android:textOn="@string/d_minus_three"
                    android:textOff="@string/d_minus_three"/>

            <ToggleButton
                    android:id="@+id/notif_one_week"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_grey"
                    android:layout_marginEnd="@dimen/basic"
                    android:textOn="@string/d_minus_one_week"
                    android:textOff="@string/d_minus_one_week"/>
        </LinearLayout>

    <Button
            android:id="@+id/mBtnPickNotif"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/basic"
            android:layout_marginEnd="@dimen/basic"
            android:background="@color/secondaryColor"
            android:text="@string/pick"
            android:onClick="clickDataPicker"
            app:layout_constraintTop_toTopOf="@+id/loan_notif_title"
            app:layout_constraintBottom_toBottomOf="@+id/loan_notif_title"
            app:layout_constraintLeft_toRightOf="@+id/mBtnCancelNotif"
            app:layout_constraintRight_toRightOf="parent"/>


    <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:text="@string/mandatory_information"
            android:textSize="@dimen/text_size"
            android:gravity="center_vertical"
            android:background="@color/light_pink"
            android:padding="@dimen/middle"
            android:drawablePadding="@dimen/middle"
            android:drawableStart="@drawable/ic_warning_pink"
            app:layout_constraintTop_toBottomOf="@id/loan_notif_title"
            app:layout_constraintLeft_toLeftOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_right"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_left"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mBtnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_submit"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"
            app:layout_constraintRight_toLeftOf="@+id/guideline_vertical_right"
            app:maxImageSize="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>