...
    <com.guanaj.easyswipemenulibrary.EasySwipeMenuLayout
            android:id="@+id/item_loan_recycler_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftMenuView="@id/left"
            app:rightMenuView="@id/right"
            app:contentView="@id/content">

        <LinearLayout
                android:id="@+id/left"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/red"
...
